# blog

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  fly.toml
.github/workflows/: audit.yml  ci.yml  deploy.yml
content/posts/: evangelho.md  hello-world.md
src/: blog.rs  env.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
src/routes/: mod.rs
src/templates/: mod.rs
static/css/: style.css
templates/: base.html  error.html  home.html  home_fragment.html  resume.html  resume_fragment.html
templates/blog/: list.html  list_fragment.html  post.html  post_fragment.html
tests/: routes.rs  security_headers.rs
