[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
askama = { version = "0.15.6" }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "compression-gzip", "trace", "timeout"] }
pulldown-cmark = { version = "0.13.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = { version = "0.10.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" , features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "html", "parsing", "regex-fancy"] }
ammonia = { version = "4.1.2" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
